--- a/templates/home.html
+++ b/templates/home.html
@@ -41,29 +41,29 @@
         }
 
         .container {
-            background-color: rgba(202, 242, 252, 0.9);
+            background-color: rgba(236, 255, 241, 0.9);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
+            margin-top: 200px;
             text-align: center;
             flex: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            max-width: 10+00px; /* Set a maximum width for the card */
+            max-width: 2000px; /* Set a maximum width for the card */
             margin: 0 auto; /* Center the card */
         }
 
         h1 {
-            color: #05384f;
+            color: #045a1c;
             font-size: 36px;
             margin-bottom: 10px;
         }
 
         p {
-            color: #34495e;
+            color: #004d17;
             font-size: 18px;
             margin-bottom: 20px;
         }
@@ -75,7 +75,7 @@
             font-weight: bold;
             text-align: center;
             text-decoration: none;
-            background-color: #2297c9;
+            background-color: #098a18;
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -84,16 +84,16 @@
         }
 
         .btn:hover {
-            background-color: #2980b9;
+            background-color: #97d7b2;
         }
 
         .product-section {
             margin-top: 30px;
-            text-align: left;
+            text-align: center; /* Center the text within the product-section */
         }
 
         .product-section h2 {
-            color: #3498db;
+            color: #067c35;
             font-size: 24px;
             margin-bottom: 10px;
         }
@@ -113,7 +113,7 @@
                 background-position: 0% 0%;
             }
             100% {
-                background-position: 100% 100%;
+                background-position: 1000% 1000%;
             }
         }
     </style>
@@ -130,8 +130,8 @@
     </nav>
 
     <div class="container">
-        
-        <h1>Welcome to our Dr.MAV Application!</h1>
+        <img src="https://i.ibb.co/XzBfxns/Project-Name-18-removebg-preview.png" alt="Project-Name-18-removebg-preview" border="0">
+        <h1>Welcome To Our Dr.MAV Application!</h1>
 
         <div class="product-section">
             <h2>About Our Product</h2>
