--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Poppins', Arial, sans-serif; /* Use Poppins font first, fallback to Arial, sans-serif */
             background-color: #f2f2f2;
             margin: 0;
             padding: 0;
@@ -55,7 +56,7 @@
         }
 
         button {
-            background-color: #3498db;
+            background-color: #097d1a;
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -79,6 +80,21 @@
             border-radius: 4px;
             margin-bottom: 10px;
         }
+        .logout-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #dc3545;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-right: 10px;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        .logout-button:hover {
+            background-color: #c82333;
+        }
     </style>
 </head>
 <body>
@@ -101,6 +117,10 @@
             <input type="password" id="password" name="password" required>
             <br>
             <button type="submit">Login</button>
+            <br>
+            <a href="{{ url_for('signup') }}" class="logout-button">New Here? Signup</a>
+            <br>
+            <a href="{{ url_for('home') }}" class="logout-button">Go Home</a>
         </form>
     </div>
 </body>
