--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Poppins', Arial, sans-serif; /* Use Poppins font first, fallback to Arial, sans-serif */
             background-color: #f2f2f2;
             margin: 0;
             padding: 0;
@@ -55,7 +56,7 @@
         }
 
         button {
-            background-color: #08436a;
+            background-color: #07751b;
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -65,7 +66,7 @@
         }
 
         button:hover {
-            background-color: #2980b9;
+            background-color: #29b93c;
         }
 
         .flash {
@@ -79,6 +80,22 @@
             border-radius: 4px;
             margin-bottom: 10px;
         }
+        .logout-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #dc3545;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-right: 10px;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        .logout-button:hover {
+            background-color: #c82333;
+        }
+        
     </style>
 </head>
 <body>
@@ -102,11 +119,15 @@
             <br>
             <label for="user_type">User Type:</label>
             <select id="user_type" name="user_type" required>
-                <option value="doctor">Doctor</option>
-                <option value="patient">Patient</option>
+                <option value="Doctor">Doctor</option>
+                <option value="Patient">Patient</option>
             </select>
             <br>
             <button type="submit">Signup</button>
+            <br>
+            <a href="{{ url_for('login') }}" class="logout-button">Already Registered? Login</a>
+            <br>
+            <a href="{{ url_for('home') }}" class="logout-button">Go Home</a>
         </form>
     </div>
 </body>
